# hash-cpu-bench

./: .gitignore  Cargo.toml  README.md
benchmarks/AMD/Ryzen/: 2600.json  5600h.json  5950x.json  AI_9_370_HX.json  AI_9_HX_370.json
benchmarks/Intel/Core/Ultra 5/: 125H.json
benchmarks/Intel/Xeon/E5/: 2650v4.json
src/: benchmark.rs  cpuinfo.rs  main.rs
src/hashers/: argon2.rs  bcrypt.rs  mod.rs
