[package]
name = "hash-cpu-bench"
authors = ["smokingplaya"]
repository = "https://github.com/smokingplaya/hash-cpu-bench"
version = "0.1.2"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
argon2 = "0.5.3"
bcrypt = "0.17.1"
clap = { version = "4.5.46", features = ["derive"] }
colored = "3.0.0"
rand_core = { version = "0.6", features = ["std"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
strum = "0.27.2"
strum_macros = "0.27.2"
sysinfo = "0.36.1"
